--- a/releases/releases.json
+++ b/releases/releases.json
@@ -1,5 +1,11 @@
 [
 {
+"3.11.1": {
+"date": "2024-05-31",
+"files": ["luarocks-3.11.1.tar.gz", "luarocks-3.11.1.tar.gz.asc", "luarocks-3.11.1-win32.zip", "luarocks-3.11.1-win32.zip.asc", "luarocks-3.11.1-windows-32.zip", "luarocks-3.11.1-windows-32.zip.asc", "luarocks-3.11.1-windows-64.zip", "luarocks-3.11.1-windows-64.zip.asc", "luarocks-3.11.1-linux-x86_64.zip", "luarocks-3.11.1-linux-x86_64.zip.asc"],
+"about": []
+}},
+{
 "3.11.0": {
 "date": "2024-03-13",
 "files": ["luarocks-3.11.0.tar.gz", "luarocks-3.11.0.tar.gz.asc", "luarocks-3.11.0-win32.zip", "luarocks-3.11.0-win32.zip.asc", "luarocks-3.11.0-windows-32.zip", "luarocks-3.11.0-windows-32.zip.asc", "luarocks-3.11.0-windows-64.zip", "luarocks-3.11.0-windows-64.zip.asc", "luarocks-3.11.0-linux-x86_64.zip", "luarocks-3.11.0-linux-x86_64.zip.asc"],
