add compat53 dependency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
         luarocks install busted
         luarocks install cluacov
         luarocks install busted-htest
+        luarocks install compat53
 
     - name: Unit Test
       run: |
