--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ charset                  = utf-8
 indent_style             = space
 indent_size              = 3
 
+[*.tl]
+indent_style             = space
+indent_size              = 3
+
 [Makefile]
 indent_style             = tab
 
