--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,12 @@ jobs:
         luarocks install cluacov
         luarocks install busted-htest
 
+    - name: Compile
+      run: |
+        luarocks install tl --dev --branch next
+        eval $(luarocks path)
+        ./compile.sh
+
     - name: Unit Test
       run: |
         eval $(luarocks path)
