CI updates for LuaJIT rolling release compatibility

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,14 +28,14 @@ jobs:
   TestMatrix:
     strategy:
       matrix:
-        lua-version: ["5.4", "luajit"]
+        lua-version: ["5.4", "luajit-2.1"]
         os: ["ubuntu-latest", "macos-latest"]
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@master
 
-    - uses: leafo/gh-actions-lua@master
+    - uses: hishamhm/gh-actions-lua@master
       with:
         luaVersion: ${{ matrix.lua-version }}
 
@@ -78,7 +78,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - uses: leafo/gh-actions-lua@v8.0.0
+    - uses: hishamhm/gh-actions-lua@master
       with:
         luaVersion: "5.4"
 
@@ -94,7 +94,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - uses: leafo/gh-actions-lua@v8.0.0
+    - uses: hishamhm/gh-actions-lua@master
       with:
         luaVersion: "5.4"
 
