--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,14 @@ name: test
 on:
   push:
     branches: main
+    paths-ignore:
+      - "docs"
+      - "**/*.md"
   pull_request:
     branches: '*'
+    paths-ignore:
+      - "docs"
+      - "**/*.md"
   workflow_dispatch:
     branches: '*'
 
