--- a/binary/Makefile.windows
+++ b/binary/Makefile.windows
@@ -7,9 +7,9 @@ MINGW_SYSROOT=/usr/lib/mingw-w64-sysroot/$(MINGW_PREFIX)
 OPENSSL_PLATFORM=mingw
 # Versions of dependencies
 LIBLUA_VERSION=5.4.3
-OPENSSL_VERSION=1.0.2o
+OPENSSL_VERSION=1.1.1w
 ZLIB_VERSION=1.3.1
-BZIP2_VERSION=1.0.6
+BZIP2_VERSION=1.0.8
 
 WINDOWS_DEPS_DIR=windows-deps-$(MINGW_PREFIX)
 BUILD_WINDOWS_DEPS_DIR=build-windows-deps-$(MINGW_PREFIX)
@@ -61,7 +61,7 @@ $(WINDOWS_DEPS_DIR)/lib/libz.a: $(BUILD_WINDOWS_DEPS_DIR)/zlib-$(ZLIB_VERSION)
 
 $(BUILD_WINDOWS_DEPS_DIR)/bzip2-$(BZIP2_VERSION).tar.gz:
 	mkdir -p $(@D)
-	cd $(BUILD_WINDOWS_DEPS_DIR) && curl -OL http://downloads.sourceforge.net/project/bzip2/bzip2-$(BZIP2_VERSION).tar.gz
+	cd $(BUILD_WINDOWS_DEPS_DIR) && curl -OL https://sourceware.org/pub/bzip2/bzip2-$(BZIP2_VERSION).tar.gz
 $(BUILD_WINDOWS_DEPS_DIR)/bzip2-$(BZIP2_VERSION): $(BUILD_WINDOWS_DEPS_DIR)/bzip2-$(BZIP2_VERSION).tar.gz
 	cd $(BUILD_WINDOWS_DEPS_DIR) && tar zxvpf bzip2-$(BZIP2_VERSION).tar.gz
 $(WINDOWS_DEPS_DIR)/lib/libbz2.a: $(BUILD_WINDOWS_DEPS_DIR)/bzip2-$(BZIP2_VERSION)
