--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,19 +80,19 @@ jobs:
       run: |
         sudo apt install lua5.4 liblua5.4-dev libbz2-dev libssl-dev
 
-    - name: build Linux binary
-      run: |
-        tag="v3.13.0" # tag="${{ github.ref_name }}"
-        version="${tag#v}"
-        lrdir="luarocks-$version-linux-x86_64"
-        lua54dir="/usr"
-        ./configure --lua-version=5.4 --with-lua=$lua54dir
-        make binary
-        cd build-binary
-        mkdir "$lrdir"
-        cp luarocks.exe "$lrdir/luarocks"
-        cp luarocks-admin.exe "$lrdir/luarocks-admin"
-        zip "../$lrdir.zip" "$lrdir"/*
+#    - name: build Linux binary
+#      run: |
+#        tag="v3.13.0" # tag="${{ github.ref_name }}"
+#        version="${tag#v}"
+#        lrdir="luarocks-$version-linux-x86_64"
+#        lua54dir="/usr"
+#        ./configure --lua-version=5.4 --with-lua=$lua54dir
+#        make binary
+#        cd build-binary
+#        mkdir "$lrdir"
+#        cp luarocks.exe "$lrdir/luarocks"
+#        cp luarocks-admin.exe "$lrdir/luarocks-admin"
+#        zip "../$lrdir.zip" "$lrdir"/*
 
     - name: install Windows 32-bit binary bulid deps
       run: |
